@@ -1,0 +1,13 @@
+#ifndef _OL_LRC_FETCH_MINILYRICS_H_
+#define _OL_LRC_FETCH_MINILYRICS_H_
+
+#include "ol_lrc_fetch.h"
+
+/** 
+ * @brief Returns the fetch engine of Minilyrics
+ * 
+ * @return 
+ */
+OlLrcFetchEngine *ol_lrc_fetch_minilyrics_engine ();
+
+#endif /* _OL_LRC_FETCH_MINILYRICS_H_ */
